added a function to use a word

--- a/wordest-back-end/wordest-back-end.cabal
+++ b/wordest-back-end/wordest-back-end.cabal
@@ -13,13 +13,18 @@ library
       Add
       Application
       Foundation
+      Gameplay
       Home
+      Model
   other-modules:
       Paths_wordest_back_end
   hs-source-dirs:
       src
   build-depends:
-      base
+      array
+    , base
+    , bytestring
+    , bytestring-trie
     , yesod-core
   default-language: Haskell2010
 
@@ -31,7 +36,29 @@ executable wordest-back-end
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base
+      array
+    , base
+    , bytestring
+    , bytestring-trie
+    , wordest-back-end
+    , yesod-core
+  default-language: Haskell2010
+
+test-suite wordest-back-end-test
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  other-modules:
+      GameplaySpec
+      Paths_wordest_back_end
+  hs-source-dirs:
+      test
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      array
+    , base
+    , bytestring
+    , bytestring-trie
+    , hspec
     , wordest-back-end
     , yesod-core
   default-language: Haskell2010
