--- a/wordest-back-end/package.yaml
+++ b/wordest-back-end/package.yaml
@@ -7,6 +7,7 @@ dependencies:
 - bytestring-trie
 - array
 - bytestring
+- MissingH
 
 # The library contains all of our application code. The executable
 # defined below is just a thin wrapper.
