--- a/wordest-back-end/package.yaml
+++ b/wordest-back-end/package.yaml
@@ -4,6 +4,10 @@ version: "0.0.0"
 dependencies:
 - base
 - yesod-core
+- bytestring-trie
+- array
+- bytestring
+- MissingH
 
 # The library contains all of our application code. The executable
 # defined below is just a thin wrapper.
@@ -21,3 +25,15 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - wordest-back-end
+
+tests:
+  wordest-back-end-test:
+    main: Spec.hs
+    source-dirs: test
+    ghc-options:
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
+    dependencies:
+      - wordest-back-end
+      - hspec
